--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -7,9 +7,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
+    <!-- header sections start here -->
+    <header>
+        <nav class="nav">
+            <div class="nav-div"><img src="./images/main logo.png" alt="">
+            </div>
+            <div class="nav-bar-div">
+                <ul class="nav-bar">
+                    <li class="nav-li">About us</li>
+                    <li class="nav-li">Services</li>
+                    <li class="nav-li">Use Cases</li>
+                    <li class="nav-li">Pricing </li>
+                    <li class="nav-li">Blog</li>
+                    <button class="nav-button">Request a quote</button>
+                </ul>
+            </div>
+        </nav>
+    
+    </header>
+    <!-- header sections ends here -->
+    <!-- main section starts here -->
     <main></main>
+
+    <!-- main section ends here -->
+
+    <!-- footer section starts here -->
     <footer></footer>
+    <!-- footer section ends here -->
 
 </body>
 </html>
