--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="body">
     <!-- header sections start here -->
     <header>
         <nav class="nav">
@@ -14,7 +14,7 @@
             </div>
             <div class="nav-bar-div">
                 <ul class="nav-bar">
-                    <li class="nav-li">About us</li>
+                    <li class="nav-li">About us</li>         <!-- nav button this here -->
                     <li class="nav-li">Services</li>
                     <li class="nav-li">Use Cases</li>
                     <li class="nav-li">Pricing </li>
@@ -27,7 +27,33 @@
     </header>
     <!-- header sections ends here -->
     <!-- main section starts here -->
-    <main></main>
+    <main>
+        <section>
+            <div class="section1-div1">
+                <div class="section-div2">
+                   <div class="section-div2-child">
+                      <h1 class="section-h1">Navigating the <br> digital landscape <br> for success</h1>
+                   </div>
+                   <div class="section-div2-child2"> 
+                        <h1>
+                             Our digital marketing agency helps businesses <br> grow and succeed online through a range ofc <br> services including SEO, PPC, social media marketing, <br> and content creation .
+                        </h1>
+                    </div>
+                    <div>
+                         <button class="button-dark">
+                        Book a consultation
+                         </button>
+
+
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/Illustration.png" alt="">
+                </div>
+            </div>
+        </section>
+        
+    </main>
 
     <!-- main section ends here -->
 
