project 2nd div

--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -50,6 +50,16 @@
                 <div>
                     <img src="./images/Illustration.png" alt="">
                 </div>
+                
+            </div>
+
+            <div class="frist-logo-div">
+                <img src="./images/Amazon logo.png" alt="">
+                <img src="./images/dribble logo.png" alt="">
+                <img src="./images/hubspot logo.png" alt="">
+                <img src="./images/notion logo.png" alt="">
+                <img src="./images/netflix logo.png" alt="">
+                <img src="./images/zoom logo.png" alt="">
             </div>
         </section>
         
