--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -33,6 +33,7 @@
                 <div class="section-div2">
                    <div class="section-div2-child">
                       <h1 class="section-h1">Navigating the <br> digital landscape <br> for success</h1>
+                      <img class="mobile-img" src="./images/Illustration.png" alt="">
                    </div>
                    <div class="section-div2-child2"> 
                         <h1>
@@ -48,7 +49,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="./images/Illustration.png" alt="">
+                    <img class="desktop-img" src="./images/Illustration.png" alt="">
                 </div>
                 
             </div>
@@ -68,15 +69,15 @@
                              <!-- main section 2 stsrt bnow -->
         <section>
             <div class="section2-parent-div">
-                <button>
+                <button class="section2-button">
                     <h2>
                         Services    <!-- normal button -->
                     </h2>
                 </button> 
-                <h3>
+                <p class="section2-p">
                     At our digital marketing agency, we offer a range of services to <br>
                      help businesses grow and succeed online. These services include:
-                </h3>   
+                </p>   
             </div>
         </section>                       
         
