box issue solved

--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -132,7 +132,7 @@
                         </div>
                     </div>    
                     <div class="img-container">
-                        <img src="./images/box(2).png" alt="">
+                        <img class="img-container-img"  src="./images/box(2).png" alt="">
                     </div>    
                   <!-- media quary start here 2nd box........... -->
 
@@ -172,7 +172,7 @@
                       </div>
                     </div>  
                     <div class="img-container">
-                        <img src="./images/box(3).png" alt="">
+                        <img class="img-container-img" src="./images/box(3).png" alt="">
                     </div>
 
 
@@ -212,7 +212,7 @@
                            </div>
                     </div>  
                     <div  class="img-container">
-                            <img src="./images/box(4).png" alt="">
+                            <img class="img-container-img"  src="./images/box(4).png" alt="">
                     </div>
 
                     <!-- box 4th media aquary start here ----------------->
@@ -256,7 +256,7 @@
                        </div>
                     </div>  
                     <div  class="img-container">
-                        <img src="./images/box(5).png" alt="">
+                        <img class="img-container-img" src="./images/box(5).png" alt="">
                     </div>
 
                     <!-- 5th media aquary start here---------------- -->
@@ -299,8 +299,8 @@
                         </div>
                     </div>  
                     <div  class="img-container">
-                        <img src="./images/box(6).png" alt="">
-                    </div>
+                        <img class="img-container-img"  src="./images/box(6).png" alt="">
+                    </div> 
 
 
                     <div class="div3-content-m">
