--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -670,6 +670,18 @@
             
 
         <section>
+            <div class="section9-main-div">
+                <button class="section9-button">
+                   <b>
+                   Testimonials
+                </b>
+                </button>
+
+                <p class="section9-p">
+                    Hear from Our Satisfied Clients: Read Our Testimonials <br>
+                    to Learn More about Our Digital Marketing Services
+                </p>
+            </div>
 
         </section>
 
