--- a/Postivus/index.html
+++ b/Postivus/index.html
@@ -759,7 +759,7 @@
 
 
 
-        <!--   new section    -->
+        <!--   new section div 12   -->
         <section>
             <div class="section12-div1">
                
